<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.SettingsActivity">


    <LinearLayout
        android:id="@+id/ll_about_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shape_main_activity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/server_url"
            android:textColor="#F0F1F3" />

        <EditText
            android:id="@+id/edt_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="1"

            android:minHeight="50dp"
            android:padding="5dp"
            android:textAllCaps="false"

            android:textColorHint="#F0F1F3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/server_mode_api_key"
            android:textColor="#F0F1F3" />

        <EditText
            android:id="@+id/edt_server_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:textColorHint="#F0F1F3"

            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/or"

            android:textColor="#F0F1F3"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/local_mode_api_key"
            android:textColor="#F0F1F3" />

        <EditText
            android:id="@+id/edt_local_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="2"
            android:minHeight="50dp"

            android:padding="5dp"
            android:textAllCaps="false"
            android:textColorHint="#F0F1F3"

            android:textSize="14sp" />
        <RadioGroup
            android:paddingBottom="5dp"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_server"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/radio_selector"
                android:gravity="center"
                android:minWidth="160dp"
                android:paddingRight="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/server" />

            <RadioButton
                android:id="@+id/radio_local"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/radio_selector"
                android:paddingRight="20dp"
                android:minWidth="160dp"

                android:gravity="center"
                android:text="@string/local" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_about_server"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shape_main_activity"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/max_allow_tokens"
            android:textColor="#F0F1F3" />
        <EditText
            android:id="@+id/edt_max_allow_tokens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:textColorHint="#F0F1F3"

            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/max_content_length"
            android:textColor="#F0F1F3" />
        <EditText
            android:id="@+id/edt_max_content_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:textColorHint="#F0F1F3"

            android:textSize="14sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_about_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/shape_main_activity"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/delete_history"
        android:textColor="#F0F1F3" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_main_activity"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/save"
        android:textColor="#F0F1F3" />

</RelativeLayout>