<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.ChatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@drawable/shape_main_activity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="3dp"
            android:text="@string/chat_interface"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_prompts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/img_settings"
            android:background="@drawable/shape_msg_send"
            android:padding="5dp"
            android:text="@string/promptsBean"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/settings" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/ll_chat_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_main_activity"
        android:minHeight="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|start"
            android:maxLines="6"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_msg_send"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>